# Call_me_maybe

./: .gitignore  Makefile  README.md  pyproject.toml
data/input/: functions_definition.json
data/output/: function_calls.json
src/: __init__.py  __main__.py  add_functions.py  call_me_maybe.py  constrain_generator.py  errors.py  handle_logit.py  initiate_request.py  main.py  model.py  search_token.py  utils.py
