[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Bruno", email = "bruno.fitte@sfr.fr" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
call-me-maybe = "call_me_maybe:main"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"
