[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Bruno", email = "bruno.fitte@sfr.fr" }
]
requires-python = ">=3.10"
dependencies = [
    "llm-sdk",
    "numpy>=2.2.6",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
]

[tool.uv.workspace]
members = [
    "llm_sdk",
]

[tool.uv.sources]
llm-sdk = { workspace = true }
